<resources>
    <string name="app_name">Agricowture</string>
    <string name="title_activity_main">Map</string>
    <string name="reloadButton">更新</string>
    <string name="map">マップ</string>
    <string name="menu">メニュー</string>
    <string name="calendar">カレンダー</string>
    <string name="graph">牛の移動量</string>
    <string name="edit">編集</string>
    <string name="date">日付</string>
    <string name="detail">詳細</string>
    <string name="save">保存</string>
    <string name="cow_information">牛の情報</string>
    <string name="hint">500文字以内で記入してください</string>
    <string name="back">戻る</string>
    <string name="video">動画</string>
    <string name="nameChange">名前の変更</string>
    <string name="afterName">変更前の名前</string>
    <string name="beforeName">変更後の名前</string>
    <string name="hint2">名前を入力してください</string>
    <string name="arrow">↓</string>
    <string name="description">この画像は牛が発情しているかを示しています</string>
    <string name="logo">ロゴ</string>
</resources>
