<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/video"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@color/green"/>

        <ListView
            android:id="@+id/videoList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reloadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/reloadButton"/>

        </LinearLayout>


    </LinearLayout>

    <!-- The navigation drawer -->

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/green" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/menu"/>

        <Button
            android:id="@+id/MainActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/map" />

        <Button
            android:id="@+id/CowInformationActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/cow_information"/>

        <Button
            android:id="@+id/VideoActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/video"/>

        <Button
            android:id="@+id/CalendarActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/calendar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/icon"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>