<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" />

        <Button
            android:text="@string/reloadbutton"
            android:id="@+id/reloadButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"/>

    </FrameLayout>

    <!-- The navigation drawer -->

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/green" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/menu"/>

        <Button
            android:id="@+id/MainActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/map" />

        <Button
            android:id="@+id/CowInformationButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/cow_information"/>

        <Button
            android:id="@+id/CalendarActivityButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/calendar" />


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>